--- a/Web.css
+++ b/Web.css
@@ -195,7 +195,7 @@
   }
 
   a {
-    color: var(--text);
+    color: var(--bground);
     font-family: var(--body-font);
     font-size: 20px;
     margin-top: 2rem;
